# ripatk

./: CMakeLists.txt  README.md
doc/: Ripple.json  file.json  fork.csv  nodes.csv  sortedNewNodes.csv
src/: main.cpp
